--- a/ClientApp/src/index.html
+++ b/ClientApp/src/index.html
@@ -7,8 +7,21 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <script
+      src="https://kit.fontawesome.com/e27b3d7168.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
-    <app-root>Loading...</app-root>
+    <app-root>
+      <div style="position: relative">
+        <div
+          class="spinner-border"
+          style="margin-top: 25%; margin-left: 50%; position: absolute"
+          role="status"
+          alt="loading..."
+        ></div>
+      </div>
+    </app-root>
   </body>
 </html>
